# src/Baba.Api/Endpoints/HostEndpoints.cs
@@ -11,6 +11,7 @@ public static class HostEndpoints
         api.MapGet("/host", (IServiceProvider services) =>
                 new HostInfo(
                     FileDialogs: services.GetService<IFileDialogs>() is not null,
+                    PdfPrinting: services.GetService<Baba.Application.Printing.IPdfRenderer>() is not null,
                     Version: typeof(HostEndpoints).Assembly.GetName().Version?.ToString(3) ?? "0.0.0"))
             .WithName("GetHostInfo").WithTags("Host");
 
